# pkg/apiserver/apiserver.go
@@ -1,0 +1,174 @@
+/*
+Copyright AppsCode Inc. and Contributors
+
+Licensed under the AppsCode Free Trial License 1.0.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    https://github.com/appscode/licenses/raw/1.0.0/AppsCode-Free-Trial-1.0.0.md
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+*/
+
+package apiserver
+
+import (
+	"context"
+	"fmt"
+
+	crdinstall "k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/install"
+	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+	"k8s.io/apimachinery/pkg/runtime"
+	"k8s.io/apimachinery/pkg/runtime/schema"
+	"k8s.io/apimachinery/pkg/runtime/serializer"
+	utilruntime "k8s.io/apimachinery/pkg/util/runtime"
+	"k8s.io/apiserver/pkg/registry/rest"
+	genericapiserver "k8s.io/apiserver/pkg/server"
+	clientgoscheme "k8s.io/client-go/kubernetes/scheme"
+	restclient "k8s.io/client-go/rest"
+	"k8s.io/component-base/version"
+	"k8s.io/klog/v2"
+	"kmodules.xyz/authorizer/rbac"
+	cu "kmodules.xyz/client-go/client"
+	clustermeta "kmodules.xyz/client-go/cluster"
+	opsinstall "kubeops.dev/taskqueue/apis/ops/install"
+	opsapi "kubeops.dev/taskqueue/apis/ops/v1alpha1"
+	pendingtaskstorage "kubeops.dev/taskqueue/pkg/registry/ops/pendingtask"
+	"sigs.k8s.io/controller-runtime/pkg/log"
+	"sigs.k8s.io/controller-runtime/pkg/manager"
+	metricsserver "sigs.k8s.io/controller-runtime/pkg/metrics/server"
+)
+
+var (
+	// Scheme defines methods for serializing and deserializing API objects.
+	Scheme = runtime.NewScheme()
+	// Codecs provides methods for retrieving codecs and serializers for specific
+	// versions and content types.
+	Codecs = serializer.NewCodecFactory(Scheme)
+)
+
+func init() {
+	opsinstall.Install(Scheme)
+	crdinstall.Install(Scheme)
+	utilruntime.Must(clientgoscheme.AddToScheme(Scheme))
+
+	// we need to add the options to empty v1
+	// TODO fix the server code to avoid this
+	metav1.AddToGroupVersion(Scheme, schema.GroupVersion{Version: "v1"})
+
+	// TODO: keep the generic API server from wanting this
+	unversioned := schema.GroupVersion{Group: "", Version: "v1"}
+	Scheme.AddUnversionedTypes(unversioned,
+		&metav1.Status{},
+		&metav1.APIVersions{},
+		&metav1.APIGroupList{},
+		&metav1.APIGroup{},
+		&metav1.APIResourceList{},
+	)
+}
+
+// ExtraConfig holds custom apiserver config
+type ExtraConfig struct {
+	ClientConfig *restclient.Config
+}
+
+// Config defines the config for the apiserver
+type Config struct {
+	GenericConfig *genericapiserver.RecommendedConfig
+	ExtraConfig   ExtraConfig
+}
+
+// TaskQueue contains state for a Kubernetes cluster master/api server.
+type TaskQueue struct {
+	GenericAPIServer *genericapiserver.GenericAPIServer
+	Manager          manager.Manager
+}
+
+type completedConfig struct {
+	GenericConfig genericapiserver.CompletedConfig
+	ExtraConfig   *ExtraConfig
+}
+
+// CompletedConfig embeds a private pointer that cannot be instantiated outside of this package.
+type CompletedConfig struct {
+	*completedConfig
+}
+
+// Complete fills in any fields not set that are required to have valid data. It's mutating the receiver.
+func (cfg *Config) Complete() CompletedConfig {
+	c := completedConfig{
+		cfg.GenericConfig.Complete(),
+		&cfg.ExtraConfig,
+	}
+
+	c.GenericConfig.EffectiveVersion = version.NewEffectiveVersion("1.0.0")
+	return CompletedConfig{&c}
+}
+
+// New returns a new instance of TaskQueue from the given config.
+func (c completedConfig) New(ctx context.Context) (*TaskQueue, error) {
+	genericServer, err := c.GenericConfig.New("secrets-store-reader", genericapiserver.NewEmptyDelegate())
+	if err != nil {
+		return nil, err
+	}
+	log.SetLogger(klog.NewKlogr())
+	setupLog := log.Log.WithName("setup")
+
+	cfg := c.ExtraConfig.ClientConfig
+
+	metricsServerOptions := metricsserver.Options{
+		BindAddress:   "",
+		SecureServing: false,
+		// TODO(user): TLSOpts is used to allow configuring the TLS config used for the server. If certificates are
+		// not provided, self-signed certificates will be generated by default. This option is not recommended for
+		// production environments as self-signed certificates do not offer the same level of trust and security
+		// as certificates issued by a trusted Certificate Authority (CA). The primary risk is potentially allowing
+		// unauthorized access to sensitive metrics data. Consider replacing with CertDir, CertName, and KeyName
+		// to provide certificates, ensuring the server communicates using trusted and secure certificates.
+		// TLSOpts: tlsOpts,
+	}
+	mgr, err := manager.New(cfg, manager.Options{
+		Scheme:                 Scheme,
+		Metrics:                metricsServerOptions,
+		HealthProbeBindAddress: "",
+		LeaderElection:         false,
+		LeaderElectionID:       "5b87adeb.operator.taskqueue.dev",
+		NewClient:              cu.NewClient,
+	})
+	if err != nil {
+		return nil, fmt.Errorf("unable to start manager, reason: %v", err)
+	}
+	ctrlClient := mgr.GetClient()
+	rbacAuthorizer := rbac.NewForManagerOrDie(ctx, mgr)
+	setupLog.Info("setup done")
+
+	cid, err := clustermeta.ClusterUID(mgr.GetAPIReader())
+	if err != nil {
+		return nil, err
+	}
+
+	s := &TaskQueue{
+		GenericAPIServer: genericServer,
+		Manager:          mgr,
+	}
+
+	{
+		apiGroupInfo := genericapiserver.NewDefaultAPIGroupInfo(opsapi.GroupName, Scheme, metav1.ParameterCodec, Codecs)
+
+		v1alpha1storage := map[string]rest.Storage{}
+
+		//v1alpha1storage[opsapi.ResourcePendingTasks] = opsregistry.RESTInPeace(pendingtask.NewREST(Scheme, c.GenericConfig.RESTOptionsGetter))
+		v1alpha1storage[opsapi.ResourcePendingTasks] = pendingtaskstorage.NewStorage(ctrlClient, cid, rbacAuthorizer)
+		apiGroupInfo.VersionedResourcesStorageMap["v1alpha1"] = v1alpha1storage
+
+		if err := s.GenericAPIServer.InstallAPIGroup(&apiGroupInfo); err != nil {
+			return nil, err
+		}
+	}
+
+	return s, nil
+}
